--- a/SplashImage/SplashImage.csproj
+++ b/SplashImage/SplashImage.csproj
@@ -6,8 +6,9 @@
     <ApplicationIcon />
     <OutputType>WinExe</OutputType>
     <StartupObject />
+    <ApplicationManifest>app.manifest</ApplicationManifest>
   </PropertyGroup>
   <ItemGroup>
-    <PackageReference Include="Lsj.Util.Win32" Version="1.0.2" />
+    <PackageReference Include="Lsj.Util.Win32" Version="1.1.0" />
   </ItemGroup>
 </Project>
